samples/negative/01_unknown_identifier.pas
program n01;
var
  x: integer;
begin
  x := missing_symbol
end.
