samples/negative/01_unknown_identifier.stderr.expected
error: unknown identifier: missing_symbol at line 5, column 8
